# pxr-gf

./: CMakeLists.txt  LICENSE.txt  README.md  colorSpace.cpp  colorSpace.h  pch.h  pyproject-dev.toml  pyproject.toml
.github/actions/building-deps/: action.yml
.github/workflows/: pypi.yml
cmake/: pxr-gf-config.cmake.in
nc/: nanocolor.c  nanocolor.h
resources/: gfGenCode.py
resources/templates/: dualQuat.template.cpp  dualQuat.template.h  matrix.template.cpp  matrix.template.h  matrix2.template.cpp  matrix2.template.h  matrix3.template.cpp  matrix3.template.h  matrix4.template.cpp  matrix4.template.h  quat.template.cpp  quat.template.h  range.template.cpp  range.template.h  vec.template.cpp  vec.template.h  wrapDualQuat.template.cpp  wrapMatrix.template.cpp  wrapMatrix2.template.cpp  wrapMatrix3.template.cpp  wrapMatrix4.template.cpp  wrapQuat.template.cpp  wrapRange.template.cpp  wrapVec.template.cpp
src/: CMakeLists.txt
src/pxr/gf/: api.h  bbox3d.cpp  bbox3d.h  camera.cpp  camera.h  color.cpp  color.h  colorSpace.cpp  colorSpace.h  colorSpace_data.h  declare.h  dualQuatd.cpp  dualQuatd.h  dualQuatf.cpp  dualQuatf.h  dualQuath.cpp  dualQuath.h  frustum.cpp  frustum.h  gamma.cpp  gamma.h  half.cpp  half.h  homogeneous.cpp  homogeneous.h  ilmbase_half.cpp  ilmbase_half.h  ilmbase_half.patch  ilmbase_halfLimits.h  interval.cpp  interval.h  limits.h  line.cpp  line.h  line2d.cpp  line2d.h  lineSeg.cpp  lineSeg.h  lineSeg2d.cpp  lineSeg2d.h  (+85 more)
src/pxr/gf/nc/: nanocolor.c  nanocolor.h
src/python/: CMakeLists.txt  __init__.py  module.cpp  wrapBBox3d.cpp  wrapCamera.cpp  wrapColor.cpp  wrapColorSpace.cpp  wrapDualQuatd.cpp  wrapDualQuatf.cpp  wrapDualQuath.cpp  wrapFrustum.cpp  wrapGamma.cpp  wrapHalf.cpp  wrapHomogeneous.cpp  wrapInterval.cpp  wrapLimits.cpp  wrapLine.cpp  wrapLineSeg.cpp  wrapMath.cpp  wrapMatrix2d.cpp  wrapMatrix2f.cpp  wrapMatrix3d.cpp  wrapMatrix3f.cpp  wrapMatrix4d.cpp  wrapMatrix4f.cpp  wrapMultiInterval.cpp  wrapPlane.cpp  wrapQuatd.cpp  wrapQuaternion.cpp  wrapQuatf.cpp  wrapQuath.cpp  wrapRange1d.cpp  wrapRange1f.cpp  wrapRange2d.cpp  wrapRange2f.cpp  wrapRange3d.cpp  wrapRange3f.cpp  wrapRay.cpp  wrapRect2i.cpp  wrapRotation.cpp  (+15 more)
test/: CMakeLists.txt  testGfColorCpp.cpp  testGfDecomposeRotation.py  testGfFrustum.py  testGfGamma.py  testGfHardToReach.cpp  testGfLine.py  testGfMath.py  testGfMatrix.py  testGfMultiInterval.py  testGfQuaternion.py  testGfRect2i.py  testGfRotation.py  testGfSize.py  testGfTransform.py  testGfVec.py  test_GfBBox3d.py  test_GfCamera.py  test_GfColorPy.py  test_GfDualQuaternion.py  test_GfFrustum.py  test_GfHomogeneous.py  test_GfInterval.py  test_GfLineSeg.py  test_GfPlane.py  test_GfRange.py  test_GfRay.py
testenv/: testGfColorCpp.cpp
