[build-system]
requires = [
    "scikit-build-core",
    "pxr-arch-dev==25.8.*",
    "pxr-tf-dev==25.8.*",
    "pxr-boost-dev==25.8.*"
]
build-backend = "scikit_build_core.build"

[project]
name = "pxr-gf"
version = "25.8"
description = "Graphics Foundations library used in OpenUSD"
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE.txt", "NOTICE.txt"]
keywords = ["pixar", "open-usd"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
]
dependencies = [
    "pxr-arch==25.8.*",
    "pxr-tf==25.8.*",
    "pxr-boost==25.8.*"
]

[project.urls]
Repository = "https://github.com/untwine/pxr-gf"

[tool.scikit-build]
cmake.version = ">=3.23,<4.2"
cmake.args = [
    "-DBUILD_TESTS=OFF",
    "-DBUILD_SHARED_LIBS=ON",
    "-DBUILD_PYTHON_BINDINGS=ON",
    "-DCMAKE_INSTALL_LIBDIR=pxr/.libs",
    "-DCMAKE_INSTALL_INCLUDEDIR=pxr-gf/include",
    "-DCMAKE_INSTALL_DATAROOTDIR=pxr-gf",
    "-DCMAKE_INSTALL_PYTHON_LIBDIR=.",
]
wheel.exclude = ["pxr-gf"]
sdist.exclude = ["test", ".github"]
